// option optimize_for = LITE_RUNTIME;

package org.xresloader.pb;

message xresloader_header {
  optional string xres_ver = 1;
  optional string data_ver = 2;
  required uint32 count = 3;
  required string hash_code = 4;
  optional string description = 5;
}

message xresloader_datablocks {
  optional xresloader_header header = 1;
  repeated bytes data_block = 2;
}
